    to build a source package which contains (unmanaged) changes to the
    upstream source code. Closes: #579012
  * dpkg-source now captures the output of patch and prints it on error so
    that the user can better diagnose what went wrong. Closes: #575304
  * Fix Dpkg::Changelog to cope properly with an entry of version "0".
    Add non-regression test for this. Closes: #587382

  [ Guillem Jover ]
  * Require gettext 0.18:
    - Remove embedded gettext files from the repository, now properly
      installed by autopoint for all po/ directories.
    - Add versioned Build-Depends.
  * Fix variable usage after delete in dselect.
  * Change default configure admindir to LOCALSTATEDIR/lib/dpkg from
    LOCALSTATEDIR/dpkg, so that we can use a correct --localstatedir=/var.
  * Add two new dpkg options --path-exclude and --path-include for filtering
    files on package installation. This allows embedded systems to skip
    /usr/share/doc, manpages, etc. Based on work from Tollef Fog Heen and
    Martin Pitt, thanks! Closes: #68788, #68861, #497304, #525567, #583902
  * Remove obsolete internal status aliases “postinst-failed” for
    stat_halfconfigured and “removal-failed” for stat_halfinstalled.
  * Check version syntax when parsing it from libdpkg based programs.
    Closes: #574704
  * Rewrite mksplit in C, and merge it into dpkg-split.
  * Rewrite dpkg-divert in C.
  * Use linux-any wildcard for libselinux1-dev Build-Depends instead of
    using a list of negated architectures.
  * Use Breaks instead of Conflicts in dpkg, dpkg-dev and libdpkg-perl binary
    packages.
  * Move Dpkg.pm and Dpkg/Gettext.pm from dpkg to libdpkg-perl.
  * Bump Standards-Version to 3.9.0.
  * Detect when another process has locked the database, and mention that
    problematic dpkg --audit results might be due to ongoing operations.
    Closes: #80252
  * Add new dpkg --force-confask option that forces a conffile prompt when