@@ -38,6 +38,14 @@ Print the list of flags supported by the current vendor
 (one per line). See the \fBSUPPORTED FLAGS\fP section for more
 information about them.
 .TP
+.BI \-\-export= format
+Print to standard output shell (if \fIformat\fP is \fBsh\fP) or make
+(if \fIformat\fP is \fBmake\fP) commands that can be used to export
+all the compilation flags in the environment. If the \fIformat\fP value is not
+given, \fBsh\fP is assumed. Only compilations flags starting with an
+upper case character are included, others are assumed to not be suitable
+for the environment.
+.TP
 .BI \-\-get " flag"
 Print the value of the flag on standard output. Exits with 0
 if the flag is known otherwise exits with 1.
