@@ -43,6 +43,7 @@ dpkg (1.15.8) UNRELEASED; urgency=low
     that the user can better diagnose what went wrong. Closes: #575304
   * Fix Dpkg::Changelog to cope properly with an entry of version "0".
     Add non-regression test for this. Closes: #587382
+  * Add --export command to dpkg-buildflags to be used in shell with eval.
 
   [ Guillem Jover ]
   * Require gettext 0.18:
